my first commit reactwebsite

--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,200 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  font-family: "Poppins", sans-serif;
+}
+.sec2,
+.sec3,
+.sec4,
+.sec5,
+footer {
+  margin-top: 8%;
+}
+.n1,
+.n1-ul,
+.sec1,
+.sec2,
+.sec3,
+.sec4,
+.sec5,
+.ft1-div1,
+.ft1-row {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+.larva-img1 {
+  width: 7%;
+  height: auto;
+}
+.btn {
+  font-size: 1.1vw;
+}
+.btn,
+li {
+  list-style: none;
+  border: none;
+  background-color: white;
+  font-size: 1.1vw;
+}
+.sec1-d1 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.sec1-d2 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.s1-p1 {
+  width: 52%;
+  font-size: 1.1vw;
+}
+.sec1-mg1 {
+  width: 50%;
+  height: auto;
+  margin-right: 4%;
+}
+.p {
+  width: 60%;
+}
+.shild,
+.window,
+.box {
+  width: 18%;
+  height: auto;
+}
+.sec2-d1,
+.sec2-d2,
+.sec2-d3,
+p {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  width: 46%;
+  font-size: 1.1vw;
+}
+.lower-heading {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.sec3-mg1,
+.sec4-mg1,
+.sec5-mg1 {
+  width: 53%;
+  height: auto;
+  border-radius: 2vw;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
+    rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
+    rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+}
+.sec3-d1,
+.sec4-d1,
+.sec5-d1 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.sec3-d2,
+.sec4-d2,
+.sec5-d2 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 1.1vw;
 }
+.tv,
+.gear,
+.wrench {
+  width: 10%;
+  height: auto;
+  padding-right: 2%;
+}
+.larva-img2 {
+  width: 12vw;
+  margin-top: -34%;
+  margin-left: 15%;
+  height: auto;
+}
+.ft1-div1 {
+  background-color: aquamarine;
+  height: 35%;
+}
+.foothead-QR {
+  width: 5%;
+  height: auto;
+  padding: 1%;
+}
+.ft1-da {
+  position: absolute;
+  text-align: center;
+  font-size: 1.1vw;
+  left: 23%;
+}
+.ft1-db {
+  position: absolute;
+  text-align: center;
+  font-size: 1.1vw;
+  left: 35%;
+}
+.ft1-dc {
+  position: absolute;
+  text-align: center;
+  font-size: 1.1vw;
+  left: 47%;
+}
+.logo {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.ui {
+  margin-top: 15%;
+}
+.sos {
+  width: 5%;
+  height: auto;
+  margin: 4%;
+}
+.ft1-d5 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 40%;
+  margin-left: 49%;
+}
+.ft1-d0 ul li {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+.last1,
+.last {
+  margin: 0%;
+  font-size: 1.1vw;
+}
+.h,
+.h4 {
+  font-size: 1.3vw;
+}
+.lower-heading {
+  font-size: 1.1vw;
+}
+.ft1-row {
+  margin-top: 7%;
+}
+.sec1 {
+  margin-top: -2%;
+}
+.sec3-mg1{
+  margin-left: 1.5%;
+}
+
